--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/ag-grid-react-example.js",
   "scripts": {
     "examples": "webpack-dev-server --content-base src-examples/ --config config/webpack.config.examples.js --mode development --open",
-    "server": "nodemon server",
-    "start": "concurrently \"npm run server\" \"npm run examples\"",
+    "start": "npm run examples",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install  && npm run build"
   },
   "private": true,
